--- a/Login.html
+++ b/Login.html
@@ -40,8 +40,10 @@
                         </h3>
             </div>
             <div class="taskbar_actions">
-                <h3>
+                <h3 class="taskbar_actions_1">
                     <a href="/signup">Sign Up</a>
+                </h3>
+                <h3 class="taskbar_actions_2">
                     <a href="/signin">Sign In</a>
                 </h3>
             </div>
