--- a/Login.html
+++ b/Login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CTFLearn Login</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="root">
@@ -35,15 +35,15 @@
                         <h3 class="taskbar_chooses_choose">
                             <a href="/slack">Slack</a>
                         </h3>
-                        <h3 class="taskbar_chooses_choose-->disabled">
+                        <h3 class="taskbar_chooses_choose">
                             <a href>Search</a>
                         </h3>
             </div>
             <div class="taskbar_actions">
-                <h3 class="taskbar_actions_1">
+                <h3 class="taskbar_actions_actions">
                     <a href="/signup">Sign Up</a>
                 </h3>
-                <h3 class="taskbar_actions_2">
+                <h3 class="taskbar_actions_actions">
                     <a href="/signin">Sign In</a>
                 </h3>
             </div>
