--- a/Login.html
+++ b/Login.html
@@ -76,7 +76,7 @@
                         <hr class="form_divider">
                         <h6 class="form_suggestion">
                             <a href="/signup">Don't have an account</a>
-                            <a> or</a>
+                            <span style="color: #d3d3d4">or</span>
                             <a href="/forgotpassword">forgot your password?</a>
                         </h6>
                     </form>
