--- a/Scoreboard.html
+++ b/Scoreboard.html
@@ -66,6 +66,20 @@
                         <p class="tab_Details_Users">100 users</p>
                         <p class="tab_Details_Timestamp">in 11 hours</p>
                     </div>
+                </div>               
+            </div>
+            <div class="Content">
+                <header class="full_Header">
+                    <h1 class="header_title">Scoreboard</h1>
+                    <p class="header_Details">for Everyone</p>
+                </header>
+                <div class="table_Scoreboard">
+                    <div class="table_Header">
+                        <h3 class="table_Header_Text">RANK</h3>
+                        <h3 class="table_Header_Text">USER</h3>
+                        <h3 class="table_Header_Text">COUNTRY</h3>
+                        <h3 class="table_Header_Text">POIN</h3>
+                    </div>
                 </div>
             </div>
         </div>
