--- a/Scoreboard.html
+++ b/Scoreboard.html
@@ -78,9 +78,135 @@
                         <h3 class="table_Header_Text">RANK</h3>
                         <h3 class="table_Header_Text">USER</h3>
                         <h3 class="table_Header_Text">COUNTRY</h3>
-                        <h3 class="table_Header_Text">POIN</h3>
+                        <h3 class="table_Header_Text">POINTS</h3>
+                    </div>
+                    <div class="table_rows">
+                        <div class="table_row_rank">
+                            <p class="table_row_rank_focus focus">1</p>
+                            <span></span>
+                        </div>
+                        <div class="table_row_user">
+                            <p class="table_row_user_focus focus_action">
+                                <div class="user">
+                                    <a href="/user/kronos">
+                                        <div class="user_profile">
+                                            <img class="user_profile_picture" src="Picture/4685.jpg" alt="">
+                                        </div>
+                                        <p class="user_user">kronos</p>
+                                        <div class="user_clear"></div>
+                                    </a>
+                                </div>
+                            </p>                        
+                        </div>
+                        <div class="table_row_country">
+                            <p class="table_row_country_focus focus"></p>
+                        </div>
+                        <div class="table_row_point">
+                            <p class="table_row_point_focus focus">48900</p>
+                        </div>
+                    </div>
+                    <div class="table_rows">
+                        <div class="table_row_rank">
+                            <p class="table_row_rank_focus focus">2</p>
+                            <span></span>
+                        </div>
+                        <div class="table_row_user">
+                            <p class="table_row_user_focus focus_action">
+                                <div class="user">
+                                    <a href="/user/tenchijin">
+                                        <div class="user_profile">
+                                            <img class="user_profile_picture" src="Picture/4685.jpg" alt="">
+                                        </div>
+                                        <p class="user_user">tenchijin</p>
+                                        <div class="user_clear"></div>
+                                    </a>
+                                </div>
+                            </p>                        
+                        </div>
+                        <div class="table_row_country">
+                            <p class="table_row_country_focus focus"></p>
+                        </div>
+                        <div class="table_row_point">
+                            <p class="table_row_point_focus focus">38175</p>
+                        </div>
+                    </div>
+                    <div class="table_rows">
+                        <div class="table_row_rank">
+                            <p class="table_row_rank_focus focus">3</p>
+                            <span></span>
+                        </div>
+                        <div class="table_row_user">
+                            <p class="table_row_user_focus focus_action">
+                                <div class="user">
+                                    <a href="/user/Yeraisci">
+                                        <div class="user_profile">
+                                            <img class="user_profile_picture" src="Picture/4685.jpg" alt="">
+                                        </div>
+                                        <p class="user_user">Yeraisci</p>
+                                        <div class="user_clear"></div>
+                                    </a>
+                                </div>
+                            </p>                        
+                        </div>
+                        <div class="table_row_country">
+                            <p class="table_row_country_focus focus">Indonesia</p>
+                        </div>
+                        <div class="table_row_point">
+                            <p class="table_row_point_focus focus">37275</p>
+                        </div>
+                    </div>
+                    <div class="table_rows">
+                        <div class="table_row_rank">
+                            <p class="table_row_rank_focus focus">4</p>
+                            <span></span>
+                        </div>
+                        <div class="table_row_user">
+                            <p class="table_row_user_focus focus_action">
+                                <div class="user">
+                                    <a href="/user/Anony">
+                                        <div class="user_profile">
+                                            <img class="user_profile_picture" src="Picture/4685.jpg" alt="">
+                                        </div>
+                                        <p class="user_user">Anony</p>
+                                        <div class="user_clear"></div>
+                                    </a>
+                                </div>
+                            </p>                        
+                        </div>
+                        <div class="table_row_country">
+                            <p class="table_row_country_focus focus">Poland</p>
+                        </div>
+                        <div class="table_row_point">
+                            <p class="table_row_point_focus focus">37125</p>
+                        </div>
+                    </div>
+                    <div class="table_rows">
+                        <div class="table_row_rank">
+                            <p class="table_row_rank_focus focus">5</p>
+                            <span></span>
+                        </div>
+                        <div class="table_row_user">
+                            <p class="table_row_user_focus focus_action">
+                                <div class="user">
+                                    <a href="/user/Kaliber">
+                                        <div class="user_profile">
+                                            <img class="user_profile_picture" src="Picture/4685.jpg" alt="">
+                                        </div>
+                                        <p class="user_user">Kaliber</p>
+                                        <div class="user_clear"></div>
+                                    </a>
+                                </div>
+                            </p>                        
+                        </div>
+                        <div class="table_row_country">
+                            <p class="table_row_country_focus focus">Poland</p>
+                        </div>
+                        <div class="table_row_point">
+                            <p class="table_row_point_focus focus">31800</p>
+                        </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
