--- a/Scoreboard.html
+++ b/Scoreboard.html
@@ -90,7 +90,7 @@
                                 <div class="user">
                                     <a href="/user/kronos">
                                         <div class="user_profile">
-                                            <img class="user_profile_picture" src="Picture/4685.jpg" alt="">
+                                            <img class="user_profile_picture" src="E:/huong/cho-canh-cho-corgi-cho-tot.jpg" alt="">
                                         </div>
                                         <p class="user_user">kronos</p>
                                         <div class="user_clear"></div>
@@ -115,7 +115,7 @@
                                 <div class="user">
                                     <a href="/user/tenchijin">
                                         <div class="user_profile">
-                                            <img class="user_profile_picture" src="Picture/4685.jpg" alt="">
+                                            <img class="user_profile_picture" src="E:/huong/cho-canh-cho-corgi-cho-tot.jpg" alt="">
                                         </div>
                                         <p class="user_user">tenchijin</p>
                                         <div class="user_clear"></div>
@@ -140,7 +140,7 @@
                                 <div class="user">
                                     <a href="/user/Yeraisci">
                                         <div class="user_profile">
-                                            <img class="user_profile_picture" src="Picture/4685.jpg" alt="">
+                                            <img class="user_profile_picture" src="E:/huong/cho-canh-cho-corgi-cho-tot.jpg" alt="">
                                         </div>
                                         <p class="user_user">Yeraisci</p>
                                         <div class="user_clear"></div>
@@ -165,7 +165,7 @@
                                 <div class="user">
                                     <a href="/user/Anony">
                                         <div class="user_profile">
-                                            <img class="user_profile_picture" src="Picture/4685.jpg" alt="">
+                                            <img class="user_profile_picture" src="E:/huong/cho-canh-cho-corgi-cho-tot.jpg" alt="">
                                         </div>
                                         <p class="user_user">Anony</p>
                                         <div class="user_clear"></div>
@@ -190,7 +190,7 @@
                                 <div class="user">
                                     <a href="/user/Kaliber">
                                         <div class="user_profile">
-                                            <img class="user_profile_picture" src="Picture/4685.jpg" alt="">
+                                            <img class="user_profile_picture" src="E:/huong/cho-canh-cho-corgi-cho-tot.jpg" alt="">
                                         </div>
                                         <p class="user_user">Kaliber</p>
                                         <div class="user_clear"></div>
