--- a/Scoreboard.html
+++ b/Scoreboard.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CTFLearn Scoreboard</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="font.css"> -->
 </head>
 <body>
     <div id="root">
+           
         <nav class="taskbar">
             <div class="taskbar_logo">
                 <h3>CTFLEARN <span style="opacity: 0.33;">V2</span></h3>
@@ -90,7 +93,7 @@
                                 <div class="user">
                                     <a href="/user/kronos">
                                         <div class="user_profile">
-                                            <img class="user_profile_picture" src="E:/huong/cho-canh-cho-corgi-cho-tot.jpg" alt="">
+                                            <img class="user_profile_picture" src="./img/cho-canh-cho-corgi-cho-tot.jpg" alt="">
                                         </div>
                                         <p class="user_user">kronos</p>
                                         <div class="user_clear"></div>
@@ -205,6 +208,7 @@
                             <p class="table_row_point_focus focus">31800</p>
                         </div>
                     </div>
+                    <i class="fas fa-heart" style=" color:white"></i>
                 </div>
 
             </div>
