--- a/Problems.html
+++ b/Problems.html
@@ -50,33 +50,210 @@
         </nav>
         <div class="Problems">
             <header class="header">
-                <h1 class="header_title">Problems</h1>
-                <div class="header_actions">
-                    <a href="/problems/create">
+                <div class="flex-25">
+                    <h1 class="header_title">Problems</h1>
+                </div>
+                <div class="flex-60"></div>
+                <div class="header_actions flex-25">
+                    <a href="#">
                         <button class="header_action_button">Create Problem</button>
                     </a>
                 </div>
             </header>
-            <div class="table_Cols">
-                <div class="Group tab_Choose">
-                    <h3 class="tab_title">NEW</h3>
-                    <h3 class="tab_title">POPULAR</h3>
-                    <h3 class="tab_title">BINARY</h3>
-                    <h3 class="tab_title">CRYPTOGRAPHY</h3>
-                    <h3 class="tab_title">FORENSICS</h3>
-                    <h3 class="tab_title">MISCELLANEOUS</h3>
-                    <h3 class="tab_title">PROGRAMMING</h3>
-                    <h3 class="tab_title">REVERSING</h3>
-                    <h3 class="tab_title">WEB</h3>
-                    <h3 class="tab_title">SOLVER</h3>
+            <div class="container">
+                <div class="trending_Problems">
+                    <div class="col_1"></div>
+                    <div class="Problems_problem">
+                        <div class="problem_title">
+                            <h2 class="title">Trending Problems</h2>
+                        </div>
+                        <div class="problem_preview">
+                            <div class="problem_preview_action">
+                                <div class="action_like">
+                                    <div class="like">
+                                        <span class="like_icon"></span>
+                                        <p class="copy_action">442</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <h3 class="problem_preview_title">Basic Injection</h3>
+                            <div class="problem_preview_details">
+                                <p class="problem_preview_detail_points copy">30 points</p>
+                                <p class="problem_preview_detail_solves copy">
+                                    <a href="#">3023 </a>
+                                    solves
+                                </p>
+                                <p class="problem_preview_detail_category copy">Web</p>
+                                <p class="problem_preview_detail_difficulty_easy copy">Easy</p>
+                                <p class="problem_header_detail_author copy">
+                                    <a href="#">intelagent</a>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="problem_preview">
+                            <div class="problem_preview_action">
+                                <div class="action_like">
+                                    <div class="like">
+                                        <span class="like_icon"></span>
+                                        <p class="copy_action">120</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <h3 class="problem_preview_title">IMAGE MAGIC</h3>
+                            <div class="problem_preview_details">
+                                <p class="problem_preview_detail_points copy">70 points</p>
+                                <p class="problem_preview_detail_solves copy">
+                                    <a href="#">459 </a>
+                                    solves
+                                </p>
+                                <p class="problem_preview_detail_category copy">Web</p>
+                                <p class="problem_preview_detail_difficulty_hard copy">Hard</p>
+                                <p class="problem_header_detail_author copy">
+                                    <a href="#">intelagent</a>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="problem_preview">
+                            <div class="problem_preview_action">
+                                <div class="action_like">
+                                    <div class="like">
+                                        <span class="like_icon"></span>
+                                        <p class="copy_action">256</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <h3 class="problem_preview_title">FORENSICS 101</h3>
+                            <div class="problem_preview_details">
+                                <p class="problem_preview_detail_points copy">30 points</p>
+                                <p class="problem_preview_detail_solves copy">
+                                    <a href="#">3050 </a>
+                                    solves
+                                </p>
+                                <p class="problem_preview_detail_category copy">Web</p>
+                                <p class="problem_preview_detail_difficulty_easy copy">Easy</p>
+                                <p class="problem_header_detail_author copy">
+                                    <a href="#">intelagent</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col_3"></div>
                 </div>
-                <div class="Problem_Status">
-                    <div class="trending_Problems">
-                        <h2 class="trending_Problem_title">Trending Problems</h2>
+                <div class="none"></div>
+                <div class="discover_Problems">
+                    <div class="tab_switcher">
+                        <div class="tab_default tab_active">
+                            <h3 class="tab_title">new</h3>
+                        </div>
+                        <div class="tab_default">
+                            <h3 class="tab_title">popular</h3>
+                        </div>
+                        <div class="tab_default">
+                            <h3 class="tab_title">binary</h3>
+                        </div>
+                        <div class="tab_default">
+                            <h3 class="tab_title">cryptography</h3>
+                        </div>
+                        <div class="tab_default">
+                            <h3 class="tab_title">forensics</h3>
+                        </div>
+                        <div class="tab_default">
+                            <h3 class="tab_title">miscellaneous</h3>
+                        </div>
+                        <div class="tab_default">
+                            <h3 class="tab_title">programming</h3>
+                        </div>
+                        <div class="tab_default">
+                            <h3 class="tab_title">reversing</h3>
+                        </div>
+                        <div class="tab_default">
+                            <h3 class="tab_title">web</h3>
+                        </div>
+                        <div class="tab_default">
+                            <h3 class="tab_title">solver</h3>
+                        </div>
+                    </div>
+                    <div class="Problems_problem">
+                        <div class="problem_title">
+                                <h2 class="title">New Problems</h2>
+                            </div>
+                            <div class="problem_preview">
+                                <div class="problem_preview_action">
+                                    <div class="action_like">
+                                        <div class="like">
+                                            <span class="like_icon"></span>
+                                            <p class="copy_action">28</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <h3 class="problem_preview_title">COMMON SECRET</h3>
+                                <div class="problem_preview_details">
+                                    <p class="problem_preview_detail_points copy">90 points</p>
+                                    <p class="problem_preview_detail_solves copy">
+                                        <a href="#">6 </a>
+                                        solves
+                                    </p>
+                                    <p class="problem_preview_detail_category copy">cryptography</p>
+                                    <p class="problem_preview_detail_difficulty_hard copy">Hard</p>
+                                    <p class="problem_header_detail_author copy">
+                                        <a href="#">andreigasparovici</a>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="problem_preview">
+                                <div class="problem_preview_action">
+                                    <div class="action_like">
+                                        <div class="like">
+                                            <span class="like_icon"></span>
+                                            <p class="copy_action">17</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <h3 class="problem_preview_title">CRYPTOVERSING</h3>
+                                <div class="problem_preview_details">
+                                    <p class="problem_preview_detail_points copy">90 points</p>
+                                    <p class="problem_preview_detail_solves copy">
+                                        <a href="#">15 </a>
+                                        solves
+                                    </p>
+                                    <p class="problem_preview_detail_category copy">Binary</p>
+                                    <p class="problem_preview_detail_difficulty_hard copy">Hard</p>
+                                    <p class="problem_header_detail_author copy">
+                                        <a href="#">molesz</a>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="problem_preview">
+                                <div class="problem_preview_action">
+                                    <div class="action_like">
+                                        <div class="like">
+                                            <span class="like_icon"></span>
+                                            <p class="copy_action">5</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <h3 class="problem_preview_title">IP TRACER</h3>
+                                <div class="problem_preview_details">
+                                    <p class="problem_preview_detail_points copy">20 points</p>
+                                    <p class="problem_preview_detail_solves copy">
+                                        <a href="#">39 </a>
+                                        solves
+                                    </p>
+                                    <p class="problem_preview_detail_category copy">miscellaneous</p>
+                                    <p class="problem_preview_detail_difficulty_easy copy">Easy</p>
+                                    <p class="problem_header_detail_author copy">
+                                        <a href="#">CodingIsTheNewGod</a>
+                                    </p>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="dificulty">
+
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
+            </div>  
+        </div>      
+    </div> 
 </body>
 </html>
