--- a/Problems.html
+++ b/Problems.html
@@ -106,7 +106,7 @@
                                     <a href="#">459 </a>
                                     solves
                                 </p>
-                                <p class="problem_preview_detail_category copy">Web</p>
+                                <p class="problem_preview_detail_category copy">Programming</p>
                                 <p class="problem_preview_detail_difficulty_hard copy">Hard</p>
                                 <p class="problem_header_detail_author copy">
                                     <a href="#">intelagent</a>
@@ -129,7 +129,7 @@
                                     <a href="#">3050 </a>
                                     solves
                                 </p>
-                                <p class="problem_preview_detail_category copy">Web</p>
+                                <p class="problem_preview_detail_category copy">Forensics</p>
                                 <p class="problem_preview_detail_difficulty_easy copy">Easy</p>
                                 <p class="problem_header_detail_author copy">
                                     <a href="#">intelagent</a>
@@ -248,8 +248,50 @@
                                 </div>
                             </div>
                     </div>
-                    <div class="dificulty">
-
+                    <div class="col_none"></div>
+                    <div class="filter">
+                        <div class="filter_switcher">
+                            <h4 class="filter_switcher_title">Difficulty</h4>
+                            <div class="filter_active">
+                                <h3 class="filter_text">Easy</h3>
+                            </div>
+                            <div class="filter_active">
+                                <h3 class="filter_text">Medium</h3>
+                            </div>
+                            <div class="filter_active">
+                                <h3 class="filter_text">Hard</h3>
+                            </div>
+                            <div class="filter_active">
+                                <h3 class="filter_text">Very hard</h3>
+                            </div>
+                        </div>
+                        <div class="filter_switcher">
+                            <h4 class="filter_switcher_title">Category</h4>
+                            <div class="filter_active">
+                                <h3 class="filter_text">Binary</h3>
+                            </div>
+                            <div class="filter_active">
+                                <h3 class="filter_text">Cryptography</h3>
+                            </div>
+                            <div class="filter_active">
+                                <h3 class="filter_text">Forensics</h3>
+                            </div>
+                            <div class="filter_active">
+                                <h3 class="filter_text">Miscellaneous</h3>
+                            </div>
+                            <div class="filter_active">
+                                <h3 class="filter_text">Programming</h3>
+                            </div>
+                            <div class="filter_active">
+                                <h3 class="filter_text">Reversing</h3>
+                            </div>
+                            <div class="filter_active">
+                                <h3 class="filter_text">Web</h3>
+                            </div>
+                            <div class="filter_active">
+                                <h3 class="filter_text">Solved</h3>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>  
